Update test-readfile.ipynb - added one new line after chan to test PR

--- a/test-readfile.ipynb
+++ b/test-readfile.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "#### test: adding another new line after chan to test PR\n",
-    "print(df.genres)\n"
+    "print(df.genres[0])\n"
    ]
   }
  ],
