--- a/test-readfile-credits.ipynb
+++ b/test-readfile-credits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding a new line for Michael to check and approve as Pull Request. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,131 +53,65 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>movie_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>cast</th>\n",
-       "      <th>crew</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>19995</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>[{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe48009251416c750aca23\", \"de...</td>\n",
+       "      <th>count</th>\n",
+       "      <td>4803.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>285</td>\n",
-       "      <td>Pirates of the Caribbean: At World's End</td>\n",
-       "      <td>[{\"cast_id\": 4, \"character\": \"Captain Jack Spa...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>57165.484281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>206647</td>\n",
-       "      <td>Spectre</td>\n",
-       "      <td>[{\"cast_id\": 1, \"character\": \"James Bond\", \"cr...</td>\n",
-       "      <td>[{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...</td>\n",
+       "      <th>std</th>\n",
+       "      <td>88694.614033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>49026</td>\n",
-       "      <td>The Dark Knight Rises</td>\n",
-       "      <td>[{\"cast_id\": 2, \"character\": \"Bruce Wayne / Ba...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe4781c3a36847f81398c3\", \"de...</td>\n",
+       "      <th>min</th>\n",
+       "      <td>5.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>49529</td>\n",
-       "      <td>John Carter</td>\n",
-       "      <td>[{\"cast_id\": 5, \"character\": \"John Carter\", \"c...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>9014.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>559</td>\n",
-       "      <td>Spider-Man 3</td>\n",
-       "      <td>[{\"cast_id\": 30, \"character\": \"Peter Parker / ...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe4252c3a36847f80151a5\", \"de...</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>14629.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>38757</td>\n",
-       "      <td>Tangled</td>\n",
-       "      <td>[{\"cast_id\": 34, \"character\": \"Flynn Rider (vo...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe46db9251416c91062101\", \"de...</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>58610.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>99861</td>\n",
-       "      <td>Avengers: Age of Ultron</td>\n",
-       "      <td>[{\"cast_id\": 76, \"character\": \"Tony Stark / Ir...</td>\n",
-       "      <td>[{\"credit_id\": \"55d5f7d4c3a3683e7e0016eb\", \"de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>767</td>\n",
-       "      <td>Harry Potter and the Half-Blood Prince</td>\n",
-       "      <td>[{\"cast_id\": 3, \"character\": \"Harry Potter\", \"...</td>\n",
-       "      <td>[{\"credit_id\": \"52fe4273c3a36847f801fab1\", \"de...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>209112</td>\n",
-       "      <td>Batman v Superman: Dawn of Justice</td>\n",
-       "      <td>[{\"cast_id\": 18, \"character\": \"Bruce Wayne / B...</td>\n",
-       "      <td>[{\"credit_id\": \"553bf23692514135c8002886\", \"de...</td>\n",
+       "      <th>max</th>\n",
+       "      <td>459488.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id                                     title  \\\n",
-       "0     19995                                    Avatar   \n",
-       "1       285  Pirates of the Caribbean: At World's End   \n",
-       "2    206647                                   Spectre   \n",
-       "3     49026                     The Dark Knight Rises   \n",
-       "4     49529                               John Carter   \n",
-       "5       559                              Spider-Man 3   \n",
-       "6     38757                                   Tangled   \n",
-       "7     99861                   Avengers: Age of Ultron   \n",
-       "8       767    Harry Potter and the Half-Blood Prince   \n",
-       "9    209112        Batman v Superman: Dawn of Justice   \n",
-       "\n",
-       "                                                cast  \\\n",
-       "0  [{\"cast_id\": 242, \"character\": \"Jake Sully\", \"...   \n",
-       "1  [{\"cast_id\": 4, \"character\": \"Captain Jack Spa...   \n",
-       "2  [{\"cast_id\": 1, \"character\": \"James Bond\", \"cr...   \n",
-       "3  [{\"cast_id\": 2, \"character\": \"Bruce Wayne / Ba...   \n",
-       "4  [{\"cast_id\": 5, \"character\": \"John Carter\", \"c...   \n",
-       "5  [{\"cast_id\": 30, \"character\": \"Peter Parker / ...   \n",
-       "6  [{\"cast_id\": 34, \"character\": \"Flynn Rider (vo...   \n",
-       "7  [{\"cast_id\": 76, \"character\": \"Tony Stark / Ir...   \n",
-       "8  [{\"cast_id\": 3, \"character\": \"Harry Potter\", \"...   \n",
-       "9  [{\"cast_id\": 18, \"character\": \"Bruce Wayne / B...   \n",
-       "\n",
-       "                                                crew  \n",
-       "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  \n",
-       "1  [{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...  \n",
-       "2  [{\"credit_id\": \"54805967c3a36829b5002c41\", \"de...  \n",
-       "3  [{\"credit_id\": \"52fe4781c3a36847f81398c3\", \"de...  \n",
-       "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  \n",
-       "5  [{\"credit_id\": \"52fe4252c3a36847f80151a5\", \"de...  \n",
-       "6  [{\"credit_id\": \"52fe46db9251416c91062101\", \"de...  \n",
-       "7  [{\"credit_id\": \"55d5f7d4c3a3683e7e0016eb\", \"de...  \n",
-       "8  [{\"credit_id\": \"52fe4273c3a36847f801fab1\", \"de...  \n",
-       "9  [{\"credit_id\": \"553bf23692514135c8002886\", \"de...  "
+       "            movie_id\n",
+       "count    4803.000000\n",
+       "mean    57165.484281\n",
+       "std     88694.614033\n",
+       "min         5.000000\n",
+       "25%      9014.500000\n",
+       "50%     14629.000000\n",
+       "75%     58610.500000\n",
+       "max    459488.000000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(10)"
+    "## Michael - see new line of codes below\n",
+    "df.describe()"
    ]
   }
  ],
@@ -181,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
