--- a/EDA_Chan.ipynb
+++ b/EDA_Chan.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "      <th>Overview</th>\n",
        "      <th>Popularity</th>\n",
        "      <th>Production_Companies</th>\n",
-       "      <th>production_countries</th>\n",
+       "      <th>Production_Countries</th>\n",
        "      <th>Release_Date</th>\n",
        "      <th>Revenue</th>\n",
        "      <th>Runtime</th>\n",
@@ -413,7 +413,7 @@
        "3  [{'name': 'Twentieth Century Fox Film Corporat...   \n",
        "4  [{'name': 'Sandollar Productions', 'id': 5842}...   \n",
        "\n",
-       "                                production_countries Release_Date  \\\n",
+       "                                Production_Countries Release_Date  \\\n",
        "0  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-10-30   \n",
        "1  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-15   \n",
        "2  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-22   \n",
@@ -442,13 +442,73 @@
        "4  Father of the Bride Part II  False      5.7         173.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "movies_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Adult                    object\n",
+       "Movie_Collection         object\n",
+       "Budget                   object\n",
+       "Genres                   object\n",
+       "ID                       object\n",
+       "IMDB_ID                  object\n",
+       "Original_Language        object\n",
+       "Original_Title           object\n",
+       "Overview                 object\n",
+       "Popularity               object\n",
+       "Production_Companies     object\n",
+       "Production_Countries     object\n",
+       "Release_Date             object\n",
+       "Revenue                 float64\n",
+       "Runtime                 float64\n",
+       "Spoken_languages         object\n",
+       "Status                   object\n",
+       "Tagline                  object\n",
+       "Title                    object\n",
+       "Video                    object\n",
+       "Ratings                 float64\n",
+       "Voters_Count            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df[\"Budget\"] = pd.to_numeric(movies_df[\"Budget\"], errors=\"coerce\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies"
    ]
   }
  ],
