--- a/EDA_Chan.ipynb
+++ b/EDA_Chan.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
       "text/plain": [
        "Adult                    object\n",
        "Movie_Collection         object\n",
-       "Budget                   object\n",
+       "Budget                  float64\n",
        "Genres                   object\n",
        "ID                       object\n",
        "IMDB_ID                  object\n",
@@ -484,7 +484,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,9 +504,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "movies_df.dtypes[\"Budget\"]"
    ]
