--- a/EDA_Chan.ipynb
+++ b/EDA_Chan.ipynb
@@ -1246,34 +1246,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Original_Language\n",
-       "zu       8.30\n",
-       "la       8.00\n",
-       "mn       7.55\n",
-       "am       7.45\n",
-       "pa       7.35\n",
-       "         ... \n",
-       "fy       0.00\n",
-       "lb       0.00\n",
-       "104.0     NaN\n",
-       "68.0      NaN\n",
-       "82.0      NaN\n",
+       "uz       0.0\n",
+       "mt       0.0\n",
+       "lb       0.0\n",
+       "fy       0.0\n",
+       "ky       3.1\n",
+       "        ... \n",
+       "la       8.0\n",
+       "zu       8.3\n",
+       "104.0    NaN\n",
+       "68.0     NaN\n",
+       "82.0     NaN\n",
        "Name: Ratings, Length: 92, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df.groupby(\"Original_Language\") [\"Ratings\"].mean().sort_values(ascending=False)"
+    "movies_df.groupby(\"Original_Language\") [\"Ratings\"].mean().sort_values(ascending=True)"
    ]
   },
   {
