Added tf - idf algorithm using sckit feature_extraction.text (Tfidfvectorizer), to extract keywords from series of texts. The algorithm is also explained more in detail in the notebook. This document is still just an example and the algorithm has to be implemented.

--- a/tf_idf.ipynb
+++ b/tf_idf.ipynb
@@ -508,15 +508,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-25T19:45:32.068586Z",
-     "start_time": "2024-07-25T19:45:32.058400Z"
+     "end_time": "2024-07-26T10:14:55.432782Z",
+     "start_time": "2024-07-26T10:14:55.322447Z"
     }
    },
    "cell_type": "code",
-   "source": "overview_series = df[\"overview\"].loc[(df[\"overview\"] != \"NaN\")]",
+   "source": [
+    "overview_series = df[\"overview\"].loc[(df[\"overview\"] != \"NaN\")]\n",
+    "overview_series.count()"
+   ],
    "id": "2ad36d3cd9a5c9ce",
-   "outputs": [],
-   "execution_count": 6
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44057"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
