--- a/edit_data/Chan/EDA_Chan.ipynb
+++ b/edit_data/Chan/EDA_Chan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_15308\\1850975939.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n",
     "credits_df = pd.read_csv(\"source_data/credits.csv\")\n",
