--- a/edit_data/Lee/data_cleanup_movies_df.ipynb
+++ b/edit_data/Lee/data_cleanup_movies_df.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nq/ln_gwthx2kb0qfqrxc4zszmr0000gn/T/ipykernel_28345/1748904678.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_23284\\1748904678.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_df = pd.read_csv(\"../../source_data/movies_metadata.csv\")\n"
      ]
     }
@@ -4122,7 +4122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
