Changes for keyword model and approach to tagline model

--- a/edit_data/Chan/keyword_analysis.ipynb
+++ b/edit_data/Chan/keyword_analysis.ipynb
@@ -439,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create a function to check for the presence of a specific**"
+    "**STEP 4: Create a function to check for the presence of a specific**"
    ]
   },
   {
@@ -462,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Filter the DataFrame based on the presence of that keyword**"
+    "**STEP 5: Filter the DataFrame based on the presence of that keyword**"
    ]
   },
   {
@@ -482,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Display the IDs and rows where the keyword appears**"
+    "**STEP 6: Display the IDs and rows where the keyword appears**"
    ]
   },
   {
@@ -615,6 +615,65 @@
     "# Display the IDs and rows where the target keyword appears\n",
     "filtered_df[[\"id\", \"keywords\"]]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ANOTHER METHOD: TEST**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**STEP 1: PARSE THE KEYWORDS IN \"keywords_df\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to extract keywords from the \"keywords\" column\n",
+    "def extract_keywords(keyword_str):\n",
+    "    keyword_list = ast.literal_eval(keyword_str)\n",
+    "    return [keyword[\"name\"] for keyword in keyword_list]\n",
+    "\n",
+    "# Apply the function to extract keywords\n",
+    "df[\"Keywords\"] = df[\"keywords\"].apply(extract_keywords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**STEP 2: USE REGEX TO FILTER THE KEYWORDS**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Flatten the keywords column for easier regex operations\n",
+    "keywords_flat = df.explode(\"Keywords\")\n",
+    "\n",
+    "# Define a regex pattern to filter keywords\n",
+    "pattern = r\"\\btoy\\b\" # Example pattern to filter the column containing \"toy\"\n",
+    "\n",
+    "# Apply the regex pattern to filter keywords\n",
+    "filtered_keywords = keywords_flat[keywords_flat[\"Keywords\"].str.contains(pattern, regex=True, case=False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
