--- a/edit_data/Chan/regex_Filter.ipynb
+++ b/edit_data/Chan/regex_Filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_14088\\1223631877.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_25216\\1223631877.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n"
      ]
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_14088\\800739872.py:1: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_25216\\800739872.py:1: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  new_df = pd.read_csv(\"../../edit_data/cleaned_data/movies.csv\")\n"
      ]
     },
@@ -209,7 +209,7 @@
        "1           6.9      2413.0  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "1           6.9      2413.0  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "4  Father of the Bride Part II  False      5.7         173.0  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "1      6.9        2413.0  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
        "1      6.9        2413.0                  None  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "4       [Sandollar Productions, Touchstone Pictures]  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1697,7 @@
        "4  [United States of America]  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1910,7 @@
        "1  [United States of America]  [English, Français]  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1942,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2187,7 +2187,7 @@
        "4                      [Comedy]  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2233,7 +2233,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2294,7 +2294,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,23 +2320,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 149,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "text_column = new_df[\"Tagline\"]"
+    "**USE REGEX TO FILTER THE KEYWORDS IN TAGLINE**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pattern = r\"expression\"\n",
-    "match = text_column.str.match(pattern)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
