Summary of changes in Chan's Folder

--- a/edit_data/Chan/ratings_analysis.ipynb
+++ b/edit_data/Chan/ratings_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_24620\\1223631877.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,14 +179,14 @@
        "[26024289 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"source_data/ratings.csv\")\n",
-    "df"
+    "ratings_df = pd.read_csv(\"source_data/ratings.csv\")\n",
+    "ratings_df"
    ]
   }
  ],
