--- a/edit_data/Chan/EDA_Chan.ipynb
+++ b/edit_data/Chan/EDA_Chan.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Import libraries and Read Data**"
+    "**1. Import libraries and Read Data**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,41 +24,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_30840\\2884332954.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "movies_df = pd.read_csv(\"source_data/movies_metadata.csv\")\n",
     "credits_df = pd.read_csv(\"source_data/credits.csv\")\n",
-    "links_sm_df = pd.read_csv(\"source_data/links_small.csv\")\n",
     "links_df = pd.read_csv(\"source_data/links.csv\")\n",
-    "ratings_sm_df = pd.read_csv(\"source_data/ratings_small.csv\")\n",
     "ratings_df = pd.read_csv(\"source_data/ratings.csv\")\n",
-    "tmdb5000_credits_df  = pd.read_csv(\"source_data/tmdb_5000_credits.csv\")\n",
-    "tmdb5000_movies_df = pd.read_csv(\"source_data/tmdb_5000_movies.csv\")\n",
     "pd.set_option('display.max_columns', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Adult</th>\n",
+       "      <th>Movie_Collection</th>\n",
+       "      <th>Budget</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>IMDB_ID</th>\n",
+       "      <th>Original_Language</th>\n",
+       "      <th>Original_Title</th>\n",
+       "      <th>Overview</th>\n",
+       "      <th>Popularity</th>\n",
+       "      <th>Production_Companies</th>\n",
+       "      <th>Production_Countries</th>\n",
+       "      <th>Release_Date</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Spoken_languages</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Tagline</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Video</th>\n",
+       "      <th>Ratings</th>\n",
+       "      <th>Voters_Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
+       "      <td>30000000.0</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>862</td>\n",
+       "      <td>tt0114709</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65000000.0</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>8844</td>\n",
+       "      <td>tt0113497</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>262797249.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 119050, 'name': 'Grumpy Old Men Collect...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>15602</td>\n",
+       "      <td>tt0113228</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>11.7129</td>\n",
+       "      <td>[{'name': 'Warner Bros.', 'id': 6194}, {'name'...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16000000.0</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
+       "      <td>31357</td>\n",
+       "      <td>tt0114885</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>3.859495</td>\n",
+       "      <td>[{'name': 'Twentieth Century Fox Film Corporat...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>81452156.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Friends are the people who let you be yourself...</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 96871, 'name': 'Father of the Bride Col...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
+       "      <td>11862</td>\n",
+       "      <td>tt0113041</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>[{'name': 'Sandollar Productions', 'id': 5842}...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-02-10</td>\n",
+       "      <td>76578911.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Adult                                   Movie_Collection      Budget  \\\n",
+       "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000.0   \n",
+       "1  False                                                NaN  65000000.0   \n",
+       "2  False  {'id': 119050, 'name': 'Grumpy Old Men Collect...         0.0   \n",
+       "3  False                                                NaN  16000000.0   \n",
+       "4  False  {'id': 96871, 'name': 'Father of the Bride Col...         0.0   \n",
+       "\n",
+       "                                              Genres     ID    IMDB_ID  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...    862  tt0114709   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   8844  tt0113497   \n",
+       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...  15602  tt0113228   \n",
+       "3  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...  31357  tt0114885   \n",
+       "4                     [{'id': 35, 'name': 'Comedy'}]  11862  tt0113041   \n",
+       "\n",
+       "  Original_Language               Original_Title  \\\n",
+       "0                en                    Toy Story   \n",
+       "1                en                      Jumanji   \n",
+       "2                en             Grumpier Old Men   \n",
+       "3                en            Waiting to Exhale   \n",
+       "4                en  Father of the Bride Part II   \n",
+       "\n",
+       "                                            Overview Popularity  \\\n",
+       "0  Led by Woody, Andy's toys live happily in his ...  21.946943   \n",
+       "1  When siblings Judy and Peter discover an encha...  17.015539   \n",
+       "2  A family wedding reignites the ancient feud be...    11.7129   \n",
+       "3  Cheated on, mistreated and stepped on, the wom...   3.859495   \n",
+       "4  Just when George Banks has recovered from his ...   8.387519   \n",
+       "\n",
+       "                                Production_Companies  \\\n",
+       "0     [{'name': 'Pixar Animation Studios', 'id': 3}]   \n",
+       "1  [{'name': 'TriStar Pictures', 'id': 559}, {'na...   \n",
+       "2  [{'name': 'Warner Bros.', 'id': 6194}, {'name'...   \n",
+       "3  [{'name': 'Twentieth Century Fox Film Corporat...   \n",
+       "4  [{'name': 'Sandollar Productions', 'id': 5842}...   \n",
+       "\n",
+       "                                Production_Countries Release_Date  \\\n",
+       "0  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-10-30   \n",
+       "1  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-15   \n",
+       "2  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-22   \n",
+       "3  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-22   \n",
+       "4  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-02-10   \n",
+       "\n",
+       "       Revenue  Runtime                                   Spoken_languages  \\\n",
+       "0  373554033.0     81.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "1  262797249.0    104.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...   \n",
+       "2          0.0    101.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "3   81452156.0    127.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "4   76578911.0    106.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "\n",
+       "     Status                                            Tagline  \\\n",
+       "0  Released                                                NaN   \n",
+       "1  Released          Roll the dice and unleash the excitement!   \n",
+       "2  Released  Still Yelling. Still Fighting. Still Ready for...   \n",
+       "3  Released  Friends are the people who let you be yourself...   \n",
+       "4  Released  Just When His World Is Back To Normal... He's ...   \n",
+       "\n",
+       "                         Title  Video  Ratings  Voters_Count  \n",
+       "0                    Toy Story  False      7.7        5415.0  \n",
+       "1                      Jumanji  False      6.9        2413.0  \n",
+       "2             Grumpier Old Men  False      6.5          92.0  \n",
+       "3            Waiting to Exhale  False      6.1          34.0  \n",
+       "4  Father of the Bride Part II  False      5.7         173.0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Delete and Renaming the columns**"
+    "**2. Data Cleaning**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete Columns \"homepage\", \"from the movies_df \n",
-    "movies_df.drop(columns=[\"homepage\", \"poster_path\"], axis=1, inplace=True)"
+    "# Drop unnecessary columns\n",
+    "movies_df.drop(columns=[\"homepage\", \"poster_path\"], axis=1, inplace=True)\n",
+    "\n",
+    "# Handle missing and incorrect values\n",
+    "# Convert budget and revenue columns to numeric, setting errors='coerce' will convert invalid parsing to NaN\n",
+    "movies_df['budget'] = pd.to_numeric(movies_df['budget'], errors='coerce')\n",
+    "movies_df['revenue'] = pd.to_numeric(movies_df['revenue'], errors='coerce')\n",
+    "\n",
+    "# Fill NaN values in budget and revenue with 0\n",
+    "movies_df.fillna(value={'budget': 0, 'revenue': 0}, inplace=True)\n",
+    "\n",
+    "# Ensure data consistency (e.g., converting data types)\n",
+    "movies_df['release_date'] = pd.to_datetime(movies_df['release_date'], errors='coerce')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,11 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(movies_df.loc[0, 'Genres'])\n"
+    "# Convert data types if necessary\n",
+    "movies_df['Release_Date'] = pd.to_datetime(movies_df['Release_Date'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Exploratory Data Analysis**"
    ]
   },
   {
