update text codes

--- a/edit_data/Lee/text_prep_for_keywords_analysis.ipynb
+++ b/edit_data/Lee/text_prep_for_keywords_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Texts preparation for WordCloud\n",
+    "## Merge Parsed Keywords to main Movies DF\n",
     "In this notebook, we will combine the parsed texts to create a Wordcloud for visualization\n",
     "\n",
     "\n",
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,25 +925,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Save new DF as CSV\n",
+    "\n",
+    "from pathlib import Path  \n",
+    "filepath = Path('../../edit_data/cleaned_data/movies_main.csv')  \n",
+    "filepath.parent.mkdir(parents=True, exist_ok=True)  \n",
+    "new_df.to_csv(filepath) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'join'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/nq/ln_gwthx2kb0qfqrxc4zszmr0000gn/T/ipykernel_58727/2187801935.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## add keywords with tagline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnew_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Keywords_parse'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Tagline'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6200\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6201\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6202\u001b[0m         ):\n\u001b[1;32m   6203\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6204\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'join'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Original_Title</th>\n",
+       "      <th>Original_Language</th>\n",
+       "      <th>Spoken_Languages</th>\n",
+       "      <th>Budget</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Release_Date</th>\n",
+       "      <th>Production_Companies</th>\n",
+       "      <th>Production_Countries</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Overview</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Genres_Parse</th>\n",
+       "      <th>Belongs_To_Collection_Parse</th>\n",
+       "      <th>Spoken_Languages_Parse</th>\n",
+       "      <th>Production_Companies_Parse</th>\n",
+       "      <th>Production_Countries_Parse</th>\n",
+       "      <th>Production_Countries_Code_Parse</th>\n",
+       "      <th>Keywords</th>\n",
+       "      <th>Keywords_parse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>30000000.0</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>['Animation', 'Comedy', 'Family']</td>\n",
+       "      <td>['Toy Story Collection']</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Pixar Animation Studios']</td>\n",
+       "      <td>['United States of America']</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>[{'id': 931, 'name': 'jealousy'}, {'id': 4290,...</td>\n",
+       "      <td>['jealousy', 'toy', 'boy', 'friendship', 'frie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8844</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>65000000.0</td>\n",
+       "      <td>262797249.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>['Adventure', 'Fantasy', 'Family']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['English', 'Français']</td>\n",
+       "      <td>['TriStar Pictures', 'Teitler Film', 'Intersco...</td>\n",
+       "      <td>['United States of America']</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>[{'id': 10090, 'name': 'board game'}, {'id': 1...</td>\n",
+       "      <td>['board game', 'disappearance', \"based on chil...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15602</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>[{'name': 'Warner Bros.', 'id': 6194}, {'name'...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>['Romance', 'Comedy']</td>\n",
+       "      <td>['Grumpy Old Men Collection']</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Warner Bros.', 'Lancaster Gate']</td>\n",
+       "      <td>['United States of America']</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>[{'id': 1495, 'name': 'fishing'}, {'id': 12392...</td>\n",
+       "      <td>['fishing', 'best friend', 'duringcreditssting...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31357</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>16000000.0</td>\n",
+       "      <td>81452156.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>[{'name': 'Twentieth Century Fox Film Corporat...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
+       "      <td>['Comedy', 'Drama', 'Romance']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Twentieth Century Fox Film Corporation']</td>\n",
+       "      <td>['United States of America']</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>[{'id': 818, 'name': 'based on novel'}, {'id':...</td>\n",
+       "      <td>['based on novel', 'interracial relationship',...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11862</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>en</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>76578911.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>1995-02-10</td>\n",
+       "      <td>[{'name': 'Sandollar Productions', 'id': 5842}...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
+       "      <td>['Comedy']</td>\n",
+       "      <td>['Father of the Bride Collection']</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Sandollar Productions', 'Touchstone Pictures']</td>\n",
+       "      <td>['United States of America']</td>\n",
+       "      <td>['US']</td>\n",
+       "      <td>[{'id': 1009, 'name': 'baby'}, {'id': 1599, 'n...</td>\n",
+       "      <td>['baby', 'midlife crisis', 'confidence', 'agin...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Id               Original_Title Original_Language  \\\n",
+       "0    862                    Toy Story                en   \n",
+       "1   8844                      Jumanji                en   \n",
+       "2  15602             Grumpier Old Men                en   \n",
+       "3  31357            Waiting to Exhale                en   \n",
+       "4  11862  Father of the Bride Part II                en   \n",
+       "\n",
+       "                                    Spoken_Languages      Budget      Revenue  \\\n",
+       "0           [{'iso_639_1': 'en', 'name': 'English'}]  30000000.0  373554033.0   \n",
+       "1  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  65000000.0  262797249.0   \n",
+       "2           [{'iso_639_1': 'en', 'name': 'English'}]         0.0          0.0   \n",
+       "3           [{'iso_639_1': 'en', 'name': 'English'}]  16000000.0   81452156.0   \n",
+       "4           [{'iso_639_1': 'en', 'name': 'English'}]         0.0   76578911.0   \n",
+       "\n",
+       "   Runtime Release_Date                               Production_Companies  \\\n",
+       "0     81.0   1995-10-30     [{'name': 'Pixar Animation Studios', 'id': 3}]   \n",
+       "1    104.0   1995-12-15  [{'name': 'TriStar Pictures', 'id': 559}, {'na...   \n",
+       "2    101.0   1995-12-22  [{'name': 'Warner Bros.', 'id': 6194}, {'name'...   \n",
+       "3    127.0   1995-12-22  [{'name': 'Twentieth Century Fox Film Corporat...   \n",
+       "4    106.0   1995-02-10  [{'name': 'Sandollar Productions', 'id': 5842}...   \n",
+       "\n",
+       "                                Production_Countries  ...  \\\n",
+       "0  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
+       "1  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
+       "2  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
+       "3  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
+       "4  [{'iso_3166_1': 'US', 'name': 'United States o...  ...   \n",
+       "\n",
+       "                                            Overview  \\\n",
+       "0  Led by Woody, Andy's toys live happily in his ...   \n",
+       "1  When siblings Judy and Peter discover an encha...   \n",
+       "2  A family wedding reignites the ancient feud be...   \n",
+       "3  Cheated on, mistreated and stepped on, the wom...   \n",
+       "4  Just when George Banks has recovered from his ...   \n",
+       "\n",
+       "                                              Genres  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
+       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...   \n",
+       "3  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...   \n",
+       "4                     [{'id': 35, 'name': 'Comedy'}]   \n",
+       "\n",
+       "                         Genres_Parse         Belongs_To_Collection_Parse  \\\n",
+       "0   ['Animation', 'Comedy', 'Family']            ['Toy Story Collection']   \n",
+       "1  ['Adventure', 'Fantasy', 'Family']                                 NaN   \n",
+       "2               ['Romance', 'Comedy']       ['Grumpy Old Men Collection']   \n",
+       "3      ['Comedy', 'Drama', 'Romance']                                 NaN   \n",
+       "4                          ['Comedy']  ['Father of the Bride Collection']   \n",
+       "\n",
+       "    Spoken_Languages_Parse                         Production_Companies_Parse  \\\n",
+       "0              ['English']                        ['Pixar Animation Studios']   \n",
+       "1  ['English', 'Français']  ['TriStar Pictures', 'Teitler Film', 'Intersco...   \n",
+       "2              ['English']                 ['Warner Bros.', 'Lancaster Gate']   \n",
+       "3              ['English']         ['Twentieth Century Fox Film Corporation']   \n",
+       "4              ['English']   ['Sandollar Productions', 'Touchstone Pictures']   \n",
+       "\n",
+       "     Production_Countries_Parse Production_Countries_Code_Parse  \\\n",
+       "0  ['United States of America']                          ['US']   \n",
+       "1  ['United States of America']                          ['US']   \n",
+       "2  ['United States of America']                          ['US']   \n",
+       "3  ['United States of America']                          ['US']   \n",
+       "4  ['United States of America']                          ['US']   \n",
+       "\n",
+       "                                            Keywords  \\\n",
+       "0  [{'id': 931, 'name': 'jealousy'}, {'id': 4290,...   \n",
+       "1  [{'id': 10090, 'name': 'board game'}, {'id': 1...   \n",
+       "2  [{'id': 1495, 'name': 'fishing'}, {'id': 12392...   \n",
+       "3  [{'id': 818, 'name': 'based on novel'}, {'id':...   \n",
+       "4  [{'id': 1009, 'name': 'baby'}, {'id': 1599, 'n...   \n",
+       "\n",
+       "                                      Keywords_parse  \n",
+       "0  ['jealousy', 'toy', 'boy', 'friendship', 'frie...  \n",
+       "1  ['board game', 'disappearance', \"based on chil...  \n",
+       "2  ['fishing', 'best friend', 'duringcreditssting...  \n",
+       "3  ['based on novel', 'interracial relationship',...  \n",
+       "4  ['baby', 'midlife crisis', 'confidence', 'agin...  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "## add keywords with tagline to form a new series\n",
-    "\n"
+    "# test to make sure the df can be read from the new cleaned data\n",
+    "test_df = pd.read_csv(\"../../edit_data/cleaned_data/movies_main.csv\")\n",
+    "test_df.head()"
    ]
   }
  ],
